# Brain-Clutter

./: README.md  docker-compose.yml  package-lock.json
backend/: .env  .env.example  .gitignore  Dockerfile  db.sqlite3  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_note_content.py  0003_drawing_updated_at_note_updated_at_and_more.py
backend/api/models/: __init__.py  base_model.py  base_models.py  drawing.py  note.py
backend/api/serializers/: __init__.py  drawing_serializer.py  note_serializer.py  user_serializer.py
backend/api/utils/: openai_connect.py
backend/api/views/: __init__.py  drawing_views.py  note_views.py  user_views.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/WebExport/: KalmBG.apple-touch-icon.png.import  KalmBG.html  KalmBG.icon.png.import
frontend/src/: app.css
frontend/src/lib/: resize.js
frontend/src/routes/: +layout.svelte  +page.svelte  header.svelte  iconbutton.svelte
frontend/src/routes/calendar/: +page.svelte
frontend/src/routes/meditation/: +page.svelte
frontend/src/routes/notes/: +page.js  +page.svelte  header.svelte
frontend/static/kalm/: KalmBG.png.import
